overflow fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
    
 }
+html,body{
+    overflow-x: hidden;
+}
 body{
     font-family: inter;
     
